# DimensionalEngine

./: .gitattributes  .gitignore  .gitmodules  Assets  CMakeLists.txt  README.md  imgui.ini  run.sh
DReflect/: CMakeLists.txt
DReflect/src/: DataStructs.hpp  Reflection.cpp  Reflection.hpp  main.cpp
Dimensional-Core/: CMakeLists.txt
Dimensional-Core/lib/UUID/: stduuid.hpp
Dimensional-Core/public/include/: EngineAPI.hpp  KeyCodes.hpp  NativeScriptableEntity.hpp  ReflectionData.hpp
Dimensional-Core/src/: Entry.hpp  buffer.hpp  core.hpp  defines.hpp  dimensional.hpp
Dimensional-Core/src/Asset/: Asset.hpp  AssetImporter.cpp  AssetImporter.hpp  AssetManager.cpp  AssetManager.hpp  AssetRegistrySerializer.cpp  AssetRegistrySerializer.hpp  EnvironmentMapImporter.cpp  EnvironmentMapImporter.hpp  MaterialImporter.cpp  MaterialImporter.hpp  MaterialSerializer.cpp  MaterialSerializer.hpp  ModelImporter.cpp  ModelImporter.hpp  ModelSerializer.cpp  ModelSerializer.hpp  ModelSourceImporter.cpp  ModelSourceImporter.hpp  ModelSourceSerializer.cpp  SceneImporter.cpp  SceneImporter.hpp  TextureImporter.cpp  TextureImporter.hpp
Dimensional-Core/src/Assets/: Asset.cpp  Asset.hpp  AssetImporter.cpp  AssetImporter.hpp  AssetManager.cpp  AssetManager.hpp  AssetMeta.hpp  AssetRegistrySerializer.cpp  AssetRegistrySerializer.hpp  EnvironmentMapImporter.cpp  EnvironmentMapImporter.hpp  MaterialImporter.cpp  MaterialImporter.hpp  MaterialSerializer.cpp  MaterialSerializer.hpp  ModelImporter.cpp  ModelImporter.hpp  ModelSerializer.cpp  ModelSerializer.hpp  ModelSourceImporter.cpp  ModelSourceImporter.hpp  ModelSourceSerializer.hpp  SceneImporter.cpp  SceneImporter.hpp  TextureImporter.cpp  TextureImporter.hpp  testComp.glsl  testFrag.glsl
Dimensional-Core/src/Core/: Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  EditorCamera.cpp  EditorCamera.hpp  Layer.hpp  LayerStack.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Time.cpp  Time.hpp  UUID.cpp  UUID.hpp  Window.cpp  Window.hpp
Dimensional-Core/src/Core/Assets/: Asset.cpp  Asset.hpp  AssetManager.cpp  AssetManager.hpp
Dimensional-Core/src/CoreAssets/Models/: bell.fbx
Dimensional-Core/src/CoreAssets/Models/Sword/: sword.fbx  uiopbbdfa.json
Dimensional-Core/src/CoreAssets/Shaders/: CubeMap.glsl  CubeMapConv.glsl  EquirectToCubeMap.glsl  Light.glsl  PBR.glsl  PBR1.glsl  PBRWithLighting.glsl  Test.glsl  lightFrag.glsl  lightVert.glsl  testFrag.glsl  testVert.glsl
Dimensional-Core/src/CoreAssets/Textures/: hdrmap.hdr
Dimensional-Core/src/Event/: Event.hpp  EventDispatcher.hpp  EventPool.hpp  EventSystem.hpp
Dimensional-Core/src/ImGui/: ImGuiLayer.cpp  ImGuiLayer.hpp
Dimensional-Core/src/Input/: Input.cpp  Input.hpp  KeyCodes.hpp
Dimensional-Core/src/Log/: log.cpp  log.hpp
Dimensional-Core/src/Misc/: stb_image.cpp
Dimensional-Core/src/Rendering/: CubeMap.cpp  CubeMap.hpp  DeviceManager.cpp  DeviceManager.hpp  ElementBuffer.cpp  ElementBuffer.hpp  Enums.hpp  EnvironmentMap.cpp  EnvironmentMap.hpp  FrameBuffer.cpp  FrameBuffer.hpp  GPUBuffer.cpp  GPUBuffer.hpp  GPUBufferManager.cpp  GPUBufferManager.hpp  GlslIncluder.hpp  IBLMap.cpp  IBLMap.hpp  IrMap.cpp  IrMap.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ModelSource.cpp  ModelSource.hpp  Pipeline.cpp  Pipeline.hpp  RenderGraph.hpp  RenderPass.hpp  RenderPassManager.cpp  RenderPassManager.hpp  RenderTarget.cpp  RenderTarget.hpp  RenderTargetManager.cpp  RenderTargetManager.hpp  Renderer.cpp  Renderer.hpp  (+34 more)
Dimensional-Core/src/Rendering/OpenGL/: OpenGL_Buffer.cpp  OpenGL_Buffer.hpp  OpenGL_RenderPass.cpp  OpenGL_RenderPass.hpp  OpenGL_RenderTarget.cpp  OpenGL_RenderTarget.hpp  OpenGL_Renderer.cpp  OpenGL_Renderer.hpp  OpenGL_Shader.cpp  OpenGL_Shader.hpp  OpenGL_Submesh.cpp  OpenGL_Submesh.hpp  OpenGL_Texture2D.cpp  OpenGL_Texture2D.hpp  OpenGL_TextureEnums.hpp
Dimensional-Core/src/Rendering/Vulkan/: VulkanDevice.cpp  VulkanDevice.hpp  VulkanDeviceManager.cpp  VulkanDeviceManager.hpp
Dimensional-Core/src/Scene/: Components.hpp  Entity.hpp  EntitySerializer.cpp  EntitySerializer.hpp  Scene.cpp  Scene.hpp  SceneSerializer.cpp  SceneSerializer.hpp
Dimensional-Core/src/Scripting/: ComonentsAPI.cpp  EngineAPI.cpp  EngineAPI.hpp  NativeScriptManager.cpp  NativeScriptManager.hpp  ScriptableEntity.hpp
Dimensional-Core/src/Scripting/include/: EngineAPI.cpp  EngineAPI.hpp  NativeScriptableEntity.hpp
PortalEditor/: CMakeLists.txt  imgui.ini
PortalEditor/Assets/: TestScene.dmsn  testModel.dmod
PortalEditor/Assets/Scripts/: CMakeLists.txt  Internal.cpp  preprocess.bat  preprocess.sh  test.cpp
PortalEditor/Assets/Scripts/Scripts/: Player.cpp
PortalEditor/Assets/Shaders/: BRDFComp.glsl  CubeMap.glsl  CubeMapConvComp.glsl  EquirectToCubeMapComp.glsl  IBLMapPreComp.glsl  PBRWithLighting.glsl  Screen.glsl  ShadowMap.glsl  testshader.glsl
PortalEditor/Assets/Textures/: hdrmap2.hdr  hdrmapCloud.hdr
PortalEditor/src/: Portal.cpp  PortalApp.cpp  PortalEditor.cpp  PortalEditor.hpp
PortalEditor/src/ToolPanels/: ContentBrowser.cpp  ContentBrowser.hpp  MaterialsPanel.cpp  MaterialsPanel.hpp  SceneHierarchy.cpp  SceneHierarchy.hpp  Utils.hpp
Scripting-Core/Native/: CMakeLists.txt
Scripting-Core/Native/src/: Components.hpp  CoreScriptLib.hpp  DefinesScriptLib.hpp  LinkManager.cpp  LinkManager.hpp  NativeScriptableEntity.hpp  NativeScripting.cpp  NativeScripting.hpp  ReflectionHelpers.hpp
TestBed/: CMakeLists.txt
TestBed/src/: test.cpp
Voxler-Core/: CMakeLists.txt
Voxler-Core/lib/GLAD/include/GLAD/: glad.h
Voxler-Core/lib/GLAD/src/: glad.c
Voxler-Core/src/: core.hpp  defines.hpp  main.cpp  voxler.hpp
Voxler-Core/src/Core/: Application.cpp  Application.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Window.cpp  Window.hpp  log.cpp  log.hpp
Voxler-Core/src/Event/: Event.hpp  EventDispatcher.hpp  EventPool.hpp  EventSystem.cpp  EventSystem.hpp
Voxler-Core/src/ImGui/: ImGuiLayer.cpp  ImGuiLayer.hpp  ImGuiSetup.cpp
Voxler-Core/src/Input/: Input.cpp  Input.hpp  KeyCodes.hpp
Voxler-Core/src/Log/: log.cpp  log.hpp
(+5 files in other folders)
